[gd_scene load_steps=22 format=3 uid="uid://ksml1awpfuug"]

[ext_resource type="Script" uid="uid://duiq8aqaonh7e" path="res://Resource/Levels/Tutorial_Part/level_1_tutorial_day_8.gd" id="1_afxdk"]
[ext_resource type="Texture2D" uid="uid://b8i58el7y56a0" path="res://Resource/Levels/background_assets/day.png" id="2_a77ia"]
[ext_resource type="Texture2D" uid="uid://d17d4ngwqf0r" path="res://Resource/Levels/background_assets/grass_layer.png" id="3_u03so"]
[ext_resource type="PackedScene" uid="uid://dols1i410thmc" path="res://HUD/borders/level_manager/main_camera.tscn" id="4_lcqll"]
[ext_resource type="PackedScene" uid="uid://c3mfdn3yeigf3" path="res://Behaviour/lane_.tscn" id="5_7kg8k"]
[ext_resource type="PackedScene" uid="uid://d1bmnixb7oepy" path="res://Behaviour/sun_falling_behaviour.tscn" id="6_qp071"]
[ext_resource type="PackedScene" uid="uid://pspn4765e0xo" path="res://HUD/borders/level_manager/zombie_wave_management.tscn" id="7_mq6q2"]
[ext_resource type="PackedScene" uid="uid://rvbwdqhikigs" path="res://HUD/borders/level_manager/wave.tscn" id="8_l02ng"]
[ext_resource type="PackedScene" uid="uid://crmsu5wuroi4j" path="res://unit/Zombie/basic_zombie/Coolz_zombie.tscn" id="9_afxdk"]
[ext_resource type="PackedScene" uid="uid://y1wnytmunqr8" path="res://HUD/borders/level_manager/new_plant_unlock_reward_node.tscn" id="9_rxqt1"]
[ext_resource type="PackedScene" uid="uid://yivwd3p0a1xq" path="res://unit/Zombie/basic_zombie/conehead_basic_zombie.tscn" id="9_yv50x"]
[ext_resource type="Texture2D" uid="uid://p7axs27j7smr" path="res://unit/plant/Wallnut/wallnut_seed_packet.png" id="10_afxdk"]
[ext_resource type="PackedScene" uid="uid://bogab6oeo22f2" path="res://unit/Zombie/basic_zombie/normal_basic_zombie.tscn" id="11_rwwgb"]
[ext_resource type="PackedScene" uid="uid://cbj6pyedst0gj" path="res://unit/Zombie/basic_zombie/buckethead_basic_zombie.tscn" id="12_a77ia"]
[ext_resource type="PackedScene" uid="uid://2ws764pcbwav" path="res://Behaviour/power_boost_drop.tscn" id="13_vayw6"]
[ext_resource type="PackedScene" uid="uid://c2eos12l6ww5h" path="res://unit/Zombie/poleVaultingZombie/PoleVaulting_Zombie.tscn" id="16_u03so"]
[ext_resource type="PackedScene" uid="uid://bj5p7r8n80cn" path="res://HUD/debug_mode.tscn" id="17_grslw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ewpwe"]
size = Vector2(1295, 699)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bat4m"]
bg_color = Color(0.981506, 0.928068, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mbpro"]
size = Vector2(284, 148)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r4qp0"]
size = Vector2(798, 579.25)

[node name="level_1_tutorial_day8" type="Node2D"]
position = Vector2(539, 404)
script = ExtResource("1_afxdk")

[node name="Day" type="Sprite2D" parent="."]
position = Vector2(1198, 136)
texture = ExtResource("2_a77ia")

[node name="GrassLayer" type="Sprite2D" parent="Day"]
position = Vector2(-494, 117)
texture = ExtResource("3_u03so")

[node name="main_camera" parent="." instance=ExtResource("4_lcqll")]
position = Vector2(421, 136)
_mode = "normal_mode_with_pick"
level_name = "DAY 1-8"

[node name="lane_1" parent="." instance=ExtResource("5_7kg8k")]
position = Vector2(0, -13)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="lane_2" parent="." instance=ExtResource("5_7kg8k")]
position = Vector2(0, 160)
lane_collision_layer = "lane2"
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="lane_3" parent="." instance=ExtResource("5_7kg8k")]
position = Vector2(0, 332)
lane_collision_layer = "lane3"
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="lane_4" parent="." instance=ExtResource("5_7kg8k")]
position = Vector2(0, 505)
lane_collision_layer = "lane4"
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="lane_5" parent="." instance=ExtResource("5_7kg8k")]
position = Vector2(0, 677)
lane_collision_layer = "lane5"
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="sun_falling_behaviour" parent="." node_paths=PackedStringArray("sun_location_where_it_land") instance=ExtResource("6_qp071")]
position = Vector2(0, -3)
sun_location_where_it_land = NodePath("CollisionShape2D")
cooldown_time = 35.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="sun_falling_behaviour"]
position = Vector2(654.5, 219.5)
shape = SubResource("RectangleShape2D_ewpwe")

[node name="zombie_wave_management" parent="." node_paths=PackedStringArray("main_camera", "final_as_reward", "lane_1", "lane_2", "lane_3", "lane_4", "lane_5", "lane_6", "lane_7", "collision_where_zombie_is_place_preview") instance=ExtResource("7_mq6q2")]
offset_left = -576.0
offset_top = 804.0
offset_right = 944.0
offset_bottom = 2004.0
mouse_filter = 2
progress_bar_wave_scene = "uid://dr682qf7yx8v2"
main_camera = NodePath("../main_camera")
delay_before_game_start = 30.0
final_as_reward = NodePath("../NewPlantUnlockRewardNode")
lane_1 = NodePath("../lane_1")
lane_2 = NodePath("../lane_2")
lane_3 = NodePath("../lane_3")
lane_4 = NodePath("../lane_4")
lane_5 = NodePath("../lane_5")
lane_6 = NodePath("../lane_3")
lane_7 = NodePath("../lane_3")
collision_where_zombie_is_place_preview = NodePath("../preview_zombie")

[node name="wave1" parent="zombie_wave_management" instance=ExtResource("8_l02ng")]
layout_mode = 2
_delay_duration = 40.0
_trigger_next_wave_if_this_is_clear = true
_zombie_spawn_with_delay_in_between = true
_delay_interval_between_spawn = 7.0

[node name="wave2" parent="zombie_wave_management" instance=ExtResource("8_l02ng")]
layout_mode = 2
_delay_duration = 40.0
_trigger_next_wave_if_this_is_clear = true
_zombie_spawn_with_delay_in_between = true
_delay_interval_between_spawn = 7.0

[node name="wave3" parent="zombie_wave_management" instance=ExtResource("8_l02ng")]
layout_mode = 2
_delay_duration = 40.0
_trigger_next_wave_if_this_is_clear = true
_zombie_spawn_with_delay_in_between = true
_delay_interval_between_spawn = 2.0

[node name="wave4" parent="zombie_wave_management" instance=ExtResource("8_l02ng")]
layout_mode = 2
_delay_duration = 15.0
_trigger_next_wave_if_this_is_clear = true
_zombie_spawn_with_delay_in_between = true
_delay_interval_between_spawn = 7.0

[node name="wave5" parent="zombie_wave_management" instance=ExtResource("8_l02ng")]
layout_mode = 2
_delay_duration = 40.0
_trigger_next_wave_if_this_is_clear = true
_zombie_spawn_with_delay_in_between = true
_delay_interval_between_spawn = 7.0

[node name="wave6" parent="zombie_wave_management" instance=ExtResource("8_l02ng")]
layout_mode = 2
_delay_duration = 60.0
_trigger_next_wave_if_this_is_clear = true
_zombie_spawn_with_delay_in_between = true
_delay_interval_between_spawn = 2.0

[node name="wave7" parent="zombie_wave_management" instance=ExtResource("8_l02ng")]
layout_mode = 2
_delay_duration = 15.0
_trigger_next_wave_if_this_is_clear = true
_zombie_spawn_with_delay_in_between = true
_delay_interval_between_spawn = 1.5

[node name="wave8" parent="zombie_wave_management" instance=ExtResource("8_l02ng")]
layout_mode = 2
_delay_duration = 90.0
_trigger_next_wave_if_this_is_clear = true
_zombie_spawn_with_delay_in_between = true

[node name="wave9" parent="zombie_wave_management" instance=ExtResource("8_l02ng")]
layout_mode = 2
_delay_duration = 120.0
_trigger_next_wave_if_this_is_clear = true
_zombie_spawn_with_delay_in_between = true
_mark_as_big_wave = true
_automatically_spawn_basic_zombies = true
_number_of_zombies_in_big_wave = 25

[node name="CoolzZombie" parent="zombie_wave_management" instance=ExtResource("9_afxdk")]
position = Vector2(2427, 734)

[node name="NewPlantUnlockRewardNode" parent="." instance=ExtResource("9_rxqt1")]
position = Vector2(523, -52)
_reward_description = "Now you can evolve wallnut  upto TIER3!"
_next_scene_to_play = "uid://6rxyxasyxcub"
level_data_name = "day1-8"
_plant_name = "wallnut"
_unlock_plant_tier_2 = true
_unlock_plant_tier_3 = true

[node name="SeedPacket" type="Sprite2D" parent="NewPlantUnlockRewardNode"]
z_index = 155
position = Vector2(11.5, 16.5)
scale = Vector2(1.27, 1.33)
texture = ExtResource("10_afxdk")

[node name="Panel" type="Panel" parent="NewPlantUnlockRewardNode/SeedPacket"]
offset_left = 54.7244
offset_top = 8.64662
offset_right = 66.7244
offset_bottom = 36.6466
rotation = 0.751579
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bat4m")

[node name="Panel2" type="Panel" parent="NewPlantUnlockRewardNode/SeedPacket"]
offset_left = 51.0
offset_top = 12.0
offset_right = 63.0
offset_bottom = 47.0
rotation = -0.820532
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bat4m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NewPlantUnlockRewardNode"]
position = Vector2(14, 12)
shape = SubResource("RectangleShape2D_mbpro")

[node name="for_storing_groups_of_zombies" type="Node2D" parent="."]
position = Vector2(-327, -441)

[node name="BucketHead" parent="for_storing_groups_of_zombies" instance=ExtResource("12_a77ia")]
position = Vector2(1921, 1833)

[node name="ConeHead5" parent="for_storing_groups_of_zombies" instance=ExtResource("9_yv50x")]
position = Vector2(1934, 1976)

[node name="ConeHead6" parent="for_storing_groups_of_zombies" instance=ExtResource("9_yv50x")]
position = Vector2(1908, 1683)

[node name="BasicZombie14" parent="for_storing_groups_of_zombies" instance=ExtResource("11_rwwgb")]
position = Vector2(1937, 1545)

[node name="BasicZombie15" parent="for_storing_groups_of_zombies" instance=ExtResource("11_rwwgb")]
position = Vector2(1932, 2116)

[node name="BasicZombie8" parent="for_storing_groups_of_zombies" instance=ExtResource("11_rwwgb")]
position = Vector2(1651, 1690)

[node name="BasicZombie9" parent="for_storing_groups_of_zombies" instance=ExtResource("11_rwwgb")]
position = Vector2(1679, 1426)

[node name="BasicZombie10" parent="for_storing_groups_of_zombies" instance=ExtResource("11_rwwgb")]
position = Vector2(1677, 1827)

[node name="BasicZombie11" parent="for_storing_groups_of_zombies" instance=ExtResource("11_rwwgb")]
position = Vector2(1717, 1702)

[node name="BasicZombie12" parent="for_storing_groups_of_zombies" instance=ExtResource("11_rwwgb")]
position = Vector2(1663, 1969)

[node name="BasicZombie13" parent="for_storing_groups_of_zombies" instance=ExtResource("11_rwwgb")]
position = Vector2(1691, 2124)

[node name="ConeHead4" parent="for_storing_groups_of_zombies" instance=ExtResource("9_yv50x")]
position = Vector2(1623, 1412)

[node name="ConeHead" parent="for_storing_groups_of_zombies" instance=ExtResource("9_yv50x")]
position = Vector2(1448, 1410)

[node name="ConeHead2" parent="for_storing_groups_of_zombies" instance=ExtResource("9_yv50x")]
position = Vector2(1390, 1401)

[node name="ConeHead3" parent="for_storing_groups_of_zombies" instance=ExtResource("9_yv50x")]
position = Vector2(1405, 1401)

[node name="BasicZombie" parent="for_storing_groups_of_zombies" instance=ExtResource("11_rwwgb")]
position = Vector2(162, 1834)

[node name="PowerBoostDrop" parent="for_storing_groups_of_zombies/BasicZombie" instance=ExtResource("13_vayw6")]

[node name="BasicZombie2" parent="for_storing_groups_of_zombies" instance=ExtResource("11_rwwgb")]
position = Vector2(434, 2107)

[node name="BasicZombie3" parent="for_storing_groups_of_zombies" instance=ExtResource("11_rwwgb")]
position = Vector2(654, 1670)

[node name="PowerBoostDrop" parent="for_storing_groups_of_zombies/BasicZombie3" instance=ExtResource("13_vayw6")]

[node name="BasicZombie4" parent="for_storing_groups_of_zombies" instance=ExtResource("11_rwwgb")]
position = Vector2(673, 1815)

[node name="PowerBoostDrop" parent="for_storing_groups_of_zombies/BasicZombie4" instance=ExtResource("13_vayw6")]

[node name="BasicZombie5" parent="for_storing_groups_of_zombies" instance=ExtResource("11_rwwgb")]
position = Vector2(914, 1968)

[node name="BasicZombie6" parent="for_storing_groups_of_zombies" instance=ExtResource("11_rwwgb")]
position = Vector2(1165, 2133)

[node name="PowerBoostDrop" parent="for_storing_groups_of_zombies/BasicZombie6" instance=ExtResource("13_vayw6")]

[node name="BasicZombie7" parent="for_storing_groups_of_zombies" instance=ExtResource("11_rwwgb")]
position = Vector2(1358, 1414)

[node name="PoleVaultingZombie" parent="for_storing_groups_of_zombies" instance=ExtResource("16_u03so")]
position = Vector2(2187, 1537)

[node name="PoleVaultingZombie2" parent="for_storing_groups_of_zombies" instance=ExtResource("16_u03so")]
position = Vector2(2187, 1661)

[node name="PoleVaultingZombie3" parent="for_storing_groups_of_zombies" instance=ExtResource("16_u03so")]
position = Vector2(2200, 1796)

[node name="PoleVaultingZombie4" parent="for_storing_groups_of_zombies" instance=ExtResource("16_u03so")]
position = Vector2(2172, 2088)

[node name="DebugMode" parent="." instance=ExtResource("17_grslw")]
visible = false
position = Vector2(-540, -404)

[node name="preview_zombie" type="CollisionShape2D" parent="."]
position = Vector2(2154, 189.625)
shape = SubResource("RectangleShape2D_r4qp0")
